modify Dockerfile