@@ -12,4 +12,10 @@ export JAVA_HOME
 LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CATALINA_HOME/lib
 export LD_LIBRARY_PATH
 
-. $CATALINA_HOME/bin/javaopts.sh
+NORMAL="-server -d64 -Xms${XMS_SIZE} -Xmx${XMX_SIZE}"
+# MAX_PERM_GEN="-XX:MaxPermSize=256m"
+HEAP_DUMP="-XX:+HeapDumpOnOutOfMemoryError"
+HEADLESS="-Djava.awt.headless=true"
+
+JAVA_OPTS="$JAVA_OPTS $NORMAL $HEAP_DUMP $HEADLESS"
+export JAVA_OPTS
